Fix grid layout for category members with 4 members to ensure proper alignment

--- a/css/team.css
+++ b/css/team.css
@@ -57,7 +57,7 @@
 }
 
 .category-members[data-member-count="4"] .team-member:nth-child(4) {
-    grid-column: 2 / 3;
+    grid-column: 1 / -1;
     grid-row: 2;
 }
 
